HEAD
	+ Fixed periodical removal of Trash and Spam mails
	+ Fixed bug in initialSetup which triggered migration on fresh install
	+ Increased mail_max_userip_connections to 20 for IMAP protocol
	+ Fixed values in fetchmail widget status
	+ Fixed some labels which referenced deprecated user corner
	+ Do not allow both keep and fetch all options in external accounts
3.5.4
	+ Fixed group mail accounts and their aliases
3.5.3
	+ Do not move mailbox to .bak if directory already exist
	+ Migrate mboxes path to Maildir when upgrading from 3.4
3.5.2
	+ Fixed bug when removing virtual domain
	+ Adding a virtual domain now can update old unmanaged accounts
	+ Fixed errors related with users which has account on a umanaged domain
	+ Added migration code to handle new Dovecot certs
	+ Fixed group mail alias creation
	+ Fixed problems with checking mail address duplicates
	+ Added fetchmail again
	+ Fix _accountExists ldap search filter
3.5.1
	+ Removed spurious warnings on mail services widget
	+ Disabled deprecated autocreate dovecot plugin, using mailbox and
	  namespaces instead
	+ Workaround in members table against losing of directory
	  parameter/attribute
3.5
	+ Fix groupaliases.cf parameter stub
	+ Adapt alias management to constraints by mailboxRelatedObject
	+ Changed amavis submision service to avoid rewriting rules
	+ Reorganized mail configuration
	+ Don't try to check openchange accounts on removing system users
	+ Fixed bug triggered when adding external aliases
	+ Adapted to OpenLDAP removal
	+ Postfix handles Zentyal distribution groups virtual alias
	+ Adapted MailQueue.pm to TryCatch::Lite
	+ Restart usercorner on installation / upgrade time so the new code is
	  available there too
	+ Fixed external mail retrieval configuration form from user corner
	+ Set version to 3.5
	+ Fixed some errors on user mail account edition
	+ Better integration between mail addon and mail field
	+ Avoid error when trying to show a no longer existent mail in queue