@@ -12,7 +12,8 @@ Depends: zentyal-core (>= 3.5), zentyal-core (<< 4.0),
          zentyal-firewall, zentyal-samba (>= 3.5.5),
          postfix, postfix-ldap, postfix-pcre, ssl-cert, libsasl2-modules, dovecot-common,
          dovecot-imapd, dovecot-pop3d, dovecot-sieve, dovecot-managesieved, dovecot-ldap,
-         dovecot-gssapi, dovecot-sqlite, postgrey, fetchmail, archivemail, ${misc:Depends}
+         dovecot-gssapi, dovecot-sqlite, postgrey, 
+         fetchmail, archivemail, libcrypt-rijndael-perl, ${misc:Depends}
 Description: Zentyal - Mail Service
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
